--- a/src/styles/global/main.scss
+++ b/src/styles/global/main.scss
@@ -11,6 +11,7 @@ body {
     font-style: normal;
     font-variation-settings: "wdth" 100;
     background: rgb(249, 249, 249);
+    margin: 0;
 }
 
 a {
