--- a/src/components/templates/matador/matador.module.scss
+++ b/src/components/templates/matador/matador.module.scss
@@ -1,7 +1,3 @@
-.container {
-    
-}
-
 .searchBar {
     display: flex;
     gap: 10px;
@@ -18,11 +14,16 @@
     }
 
     .clearButton {
-        background: red;
+        background: rgb(109, 14, 14);
         color: white;
         border: none;
         cursor: pointer;
         padding: 8px;
+
+        &:disabled {
+            background: #ccc;
+            cursor: not-allowed;
+        }
     }
 }
 
@@ -45,9 +46,7 @@
 
 .episodeHeader {
     display: flex;
-    align-items: baseline;
-    justify-content: space-between;
-    gap: 10px;
+    
     margin-bottom: 10px;
 }
 
@@ -94,4 +93,29 @@
 .spinnerWrapper {
     display: flex;
     align-items: center;
+}
+
+.episodeButton {
+    all: unset;
+    cursor: pointer;
+    font-size: 14px;
+    border: 1px solid gray;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+.episodeInfoWrapper {
+    display: flex;
+    align-items: baseline;
+}
+
+.episodeInfo {
+    all: unset;
+    font-size: 11px;
+    position: relative;
+    left: 10px;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    cursor: pointer;
 }
