--- a/src/components/templates/matador/matador.module.scss
+++ b/src/components/templates/matador/matador.module.scss
@@ -20,13 +20,14 @@
 .section1 {
     background-color: #ebebeb;
     
-
+    
     @media (max-width: 768px) {
         justify-content: flex-start;
     }
 }
 
 .section2 {
+    color: rgb(22 79 31);
     font-size: 13px;
     padding: 10px;
     position: sticky;
