--- a/src/components/templates/matador/matador.module.scss
+++ b/src/components/templates/matador/matador.module.scss
@@ -27,7 +27,8 @@
 }
 
 .section2 {
-    color: rgb(22 79 31);
+    color: #103516;
+    font-weight: 400;
     font-size: 14px;
     padding: 10px;
     position: sticky;
